# mlops-zoomcamp-project

./: .gitignore  README.md  pyproject.toml  setup.py
infrastructure/: docker-compose.yml
infrastructure/mlflow/: Dockerfile  docker-compose.yml  my_auth_config.ini  requirements.txt
infrastructure/mlruns/0/: meta.yaml
infrastructure/mlruns/682274496835914274/: meta.yaml
infrastructure/nginx/: nginx.conf
kafka/: consumer.py
orchestration/: docker-compose.yaml  metric_registry.py  model_registry.py  registries.py
orchestration/dags/: orchestration_homework_dag.py  simple_dag.py
orchestration/tasks/: model_tuning.py  prepare_data.py  split_data_into_train_and_test_datasets.py  train_and_save_model.py
orchestration/tasks/ml/: train_linear_regression.py
orchestration/tasks/pandas/: download_and_read_parquet.py  prepare_taxi_dataset.py
orchestration/tests/: conftest.py
orchestration/tests/tasks/: __init__.py  test_model_tuning.py  test_prepare_data.py  test_split_data_into_train_and_test_datasets.py  test_train_and_save_model.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/application_load_balancer/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs_cluster/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs_services/: main.tf  outputs.tf  variables.tf
terraform/modules/elasticcache_redis/: main.tf  outputs.tf  variables.tf
terraform/modules/iam_roles/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/scripts/: init_airflow_webserver.sh
(+28 files in other folders)
